Fix player title UI issues
There have been a few issues here with player titles for a while,
including the icons not being the same size, strings being too long, and
sometimes not being as descriptive as they could be, even when better
data could be provided.

Here is a screenshot for reference. I can record a usage video too.
https://files.tedm.io/dtss/new_players_list.png

R=tvanderlippe
Bug: 1181179
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3329265
Commit-Queue: Ted (Chromium) Meyer <tmathmeyer@chromium.org>

--- a/front_end/panels/media/playerListView.css
+++ b/front_end/panels/media/playerListView.css
@@ -20,3 +20,61 @@ li.storage-group-list-item:not(:first-child) {
 li.storage-group-list-item::before {
   display: none;
 }
+
+.player-entry-row {
+  height: 26px;
+  min-height: 26px;
+  line-height: 26px;
+}
+
+.player-entry-status-icon {
+  width: 28px;
+  min-width: 28px;
+  height: 26px;
+  border-right: 1px solid var(--color-details-hairline);
+  overflow: hidden;
+}
+
+.player-entry-status-icon-centering {
+  margin: auto;
+  display: inherit;
+}
+
+.player-entry-frame-title {
+  height: 26px;
+  padding: 0 10px;
+  border-right: 1px solid var(--color-details-hairline);
+  overflow: hidden;
+}
+
+.player-entry-player-title {
+  height: 26px;
+  padding-left: 10px;
+  overflow: hidden;
+}
+
+.player-entry-row:nth-child(odd) {
+  background: var(--color-background-elevation-0);
+}
+
+.player-entry-row:hover {
+  cursor: pointer;
+  background: var(--color-background-hover-overlay);
+}
+
+.player-entry-row.selected {
+  background: var(--color-primary-variant);
+  color: var(--legacy-selection-fg-color);
+}
+
+.player-entry-row.selected .player-entry-status-icon-centering {
+  filter: invert(100);
+}
+
+.player-entry-header {
+  height: 27px;
+  line-height: 27px;
+  min-height: 27px;
+  padding-left: 10px;
+  border-bottom: 1px solid var(--color-details-hairline);
+}
